# oneclick-bundler

./: Cargo.toml
.cargo/: config
bundler/: Cargo.toml  build.rs  bundler.rc
bundler/src/: main.rs
installer/: Cargo.toml  build.rs  installer.rc
xtask/: Cargo.toml
xtask/src/: main.rs
