[package]
name = "installer"
version = "0.1.0"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
twoway = "0.2.1"
tempfile = "3.1.0"
box-format = { git = "https://github.com/bbqsrc/box", default-features = false, features = ["reader", "zstd"] }

[build-dependencies]
embed-resource = "1.1"